# dircmp

./: Cargo.toml  Dockerfile  SETUP.md  build.rs  cargo.sh  flake.nix  setup_qt.sh
.github/workflows/: build.yml  build_qt.sh  release.yaml  release.yml
qml/: App.qml  BigButton.qml  DirectoryInput.qml  Main.qml  Navigation.qml  SlidingContainer.qml
qml/directoryInput/: Button.qml  TextField.qml
qml/navigation/: Button.qml
res/der/: from_der_to_a_b
res/der/a/: moved_b_a
res/der/b/: from_ref_to_a_b  moved_a_b
res/ref/: only_ref
res/tar/a/: only_der
slint/: ui.slint
src/: args.rs  cli.rs  crawler.rs  entry.rs  error.rs  gui.rs  hasher.rs  index.rs  lib.rs  linker.rs  main.rs  matches.rs  thread.rs
src/cmp/: mod.rs  path.rs  sorted_vec.rs
