[package]
name = "dircmp"
version = "0.1.3"
edition = "2021"

[dependencies]
bincode = "1.3.3"
clap = { version = "4.4.0", features = ["derive"] }
druid = "0.8.3"
log = "0.4.20"
md-5 = "0.10.5"
rayon = "1.7.0"
serde = { version = "1.0.188", features = ["derive"] }
simplelog = "0.12.1"
thiserror = "1.0.47"
time = "0.3.28"
