[package]
name = "dircmp"
version = "0.2.1"
edition = "2021"

[dependencies]
bincode = "1.3.3"
clap = { version = "4.4.6", features = ["derive"] }
log = "0.4.20"
md-5 = "0.10.6"
rayon = "1.8.0"
serde = { version = "1.0.189", features = ["derive"] }
simplelog = "0.12.1"
thiserror = "1.0.49"
time = "0.3.30"
