[package]
name = "dircmp"
version = "0.2.1"
edition = "2024"

[dependencies]
bincode = "1.3.3"
clap = { version = "4.6.1", features = ["derive"] }
log = "0.4.29"
md-5 = "0.11.0"
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }
simplelog = "0.12.2"
thiserror = "2.0.18"
time = "0.3.47"
